--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.maemae.authen</groupId>
+    <groupId>com.ecommerce.authen</groupId>
     <artifactId>ecommerce-authen-service</artifactId>
     <version>1.0</version>
 
@@ -12,6 +12,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
     </properties>
 
     <parent>
@@ -32,7 +34,6 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.20.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,6 +60,65 @@
             <artifactId>groovy</artifactId>
             <version>3.0.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
+
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Liquibase Plugin để thực thi các lệnh liên quan đến Liquibase -->
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.20.0</version>
+                <configuration>
+                    <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
+                    <diffChangeLogFile>src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
+                    <driver>oracle.jdbc.OracleDriver</driver>
+                    <url>jdbc:oracle:thin:@localhost:1521/ecommerce</url>
+                    <username>authen</username>
+                    <password>123456</password>
+                    <defaultSchemaName>authen</defaultSchemaName>
+                    <referenceUrl>hibernate:spring:com.ecommerce.authen.entity?dialect=org.hibernate.dialect.Oracle19cDialect</referenceUrl>
+                    <verbose>true</verbose>
+                </configuration>
+                <dependencies>
+                    <!-- Hibernate 6 -->
+                    <dependency>
+                        <groupId>org.hibernate.orm</groupId>
+                        <artifactId>hibernate-core</artifactId>
+                        <version>6.3.1.Final</version>
+                    </dependency>
+                    <!-- Jakarta Persistence -->
+                    <dependency>
+                        <groupId>jakarta.persistence</groupId>
+                        <artifactId>jakarta.persistence-api</artifactId>
+                        <version>3.1.0</version>
+                    </dependency>
+                    <!-- Liquibase Hibernate 6 -->
+                    <dependency>
+                        <groupId>org.liquibase.ext</groupId>
+                        <artifactId>liquibase-hibernate6</artifactId>
+                        <version>4.20.0</version>
+                    </dependency>
+                    <!-- Oracle JDBC -->
+                    <dependency>
+                        <groupId>com.oracle.database.jdbc</groupId>
+                        <artifactId>ojdbc8</artifactId>
+                        <version>19.3.0.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
