--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,10 +1,10 @@
 server:
-  port: ${MAEMAE_PORT:8099}
+  port: ${MAEMAE_PORT:8080}
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521/orcl
-    username: system
+    url: jdbc:oracle:thin:@localhost:1521/ecommerce
+    username: authen
     password: 123456
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
