--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -3,28 +3,16 @@ server:
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521/orcl
-    username: system
+    url: jdbc:oracle:thin:@localhost:1521/ecommerce
+    username: authen
     password: 123456
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.Oracle12cDialect
+        dialect: org.hibernate.dialect.Oracle19cDialect
         order_updates: true
         batch_versioned_data: true
     hibernate:
       ddl-auto: none #update
     show-sql: true
-  liquibase:
-    enabled: true
-    url: ${DB_URL:jdbc:oracle:thin:@localhost:1521/ecommerce}
-    user: ${DB_USERNAME:authen}
-    password: ${DB_PASSWORD:123456}
-    driver: oracle.jdbc.OracleDriver
-    change-log: classpath:config/liquibase/master.xml
-    contexts: development
-    default-schema: public
-    database-change-log-lock-table-name: DATABASECHANGELOGLOCK
-    database-change-log-table-name: DATABASECHANGELOG
-    rollback-file: db/changelog/rollback.xml
